Docs - restructure rtk-query docs organisation
- Re-organise rtk-query docs to have a single top level
- Fix loose broken links

--- a/docs/rtk-query/api/created-api/hooks.mdx
+++ b/docs/rtk-query/api/created-api/hooks.mdx
@@ -279,7 +279,7 @@ type UseQueryResult<T> = {
 ```
 
 - **Parameters**
-  - `arg`: The query argument to be used in constructing the query itself, and as a cache key for the query
+  - `arg`: The query argument to be used in constructing the query itself, and as a cache key for the query.
     You can also pass in `skipToken` here as an alternative way of skipping the query, see [skipToken](#skiptoken)
   - `options`: A set of options that control the fetching behavior of the hook
 - **Returns**
@@ -396,7 +396,7 @@ type UseQueryStateResult<T> = {
 
 - **Parameters**
 
-  - `arg`: The argument passed to the query defined in the endpoint
+  - `arg`: The argument passed to the query defined in the endpoint.
     You can also pass in `skipToken` here as an alternative way of skipping the selection, see [skipToken](#skiptoken)
   - `options`: A set of options that control the return value for the hook
 
@@ -432,7 +432,7 @@ type UseQuerySubscriptionResult = {
 
 - **Parameters**
 
-  - `arg`: The argument passed to the query defined in the endpoint
+  - `arg`: The argument passed to the query defined in the endpoint.
     You can also pass in `skipToken` here as an alternative way of skipping the query, see [skipToken](#skiptoken)
   - `options`: A set of options that control the fetching behaviour of the hook
 
