--- a/docs/rtk-query/api/createApi.mdx
+++ b/docs/rtk-query/api/createApi.mdx
@@ -261,7 +261,7 @@ By default, this function will take the query arguments, sort object keys where 
 [summary](docblock://query/createApi.ts?token=CreateApiOptions.refetchOnMountOrArgChange)
 
 :::note
-You can set this globally in `createApi`, but you can also override the default value and have more granular control by passing `refetchOnMountOrArgChange` to each individual hook call or when dispatching the [`initiate`](#initiate) action.
+You can set this globally in `createApi`, but you can also override the default value and have more granular control by passing `refetchOnMountOrArgChange` to each individual hook call or when dispatching the [`initiate`](./created-api/endpoints.mdx#initiate) action.
 :::
 
 ### `refetchOnFocus`
@@ -269,7 +269,7 @@ You can set this globally in `createApi`, but you can also override the default 
 [summary](docblock://query/createApi.ts?token=CreateApiOptions.refetchOnFocus)
 
 :::note
-You can set this globally in `createApi`, but you can also override the default value and have more granular control by passing `refetchOnFocus` to each individual hook call or when dispatching the [`initiate`](#initiate) action.
+You can set this globally in `createApi`, but you can also override the default value and have more granular control by passing `refetchOnFocus` to each individual hook call or when dispatching the [`initiate`](./created-api/endpoints.mdx#initiate) action.
 
 If you specify `track: false` when manually dispatching queries, RTK Query will not be able to automatically refetch for you.
 :::
@@ -279,7 +279,7 @@ If you specify `track: false` when manually dispatching queries, RTK Query will 
 [summary](docblock://query/createApi.ts?token=CreateApiOptions.refetchOnReconnect)
 
 :::note
-You can set this globally in `createApi`, but you can also override the default value and have more granular control by passing `refetchOnReconnect` to each individual hook call or when dispatching the [`initiate`](#initiate) action.
+You can set this globally in `createApi`, but you can also override the default value and have more granular control by passing `refetchOnReconnect` to each individual hook call or when dispatching the [`initiate`](./created-api/endpoints.mdx#initiate) action.
 
 If you specify `track: false` when manually dispatching queries, RTK Query will not be able to automatically refetch for you.
 :::
@@ -391,7 +391,7 @@ _(optional, only for query endpoints)_
 
 [summary](docblock://query/endpointDefinitions.ts?token=QueryExtraOptions.providesTags)
 
-See also [Providing cache data](../../usage/rtk-query/cached-data.mdx#providing-cache-data).
+See also [Providing cache data](../usage/cached-data.mdx#providing-cache-data).
 
 [examples](docblock://query/endpointDefinitions.ts?token=QueryExtraOptions.providesTags)
 
@@ -401,7 +401,7 @@ _(optional, only for mutation endpoints)_
 
 [summary](docblock://query/endpointDefinitions.ts?token=MutationExtraOptions.invalidatesTags)
 
-See also [Invalidating cache data](../../usage/rtk-query/cached-data.mdx#invalidating-cache-data).
+See also [Invalidating cache data](../usage/cached-data.mdx#invalidating-cache-data).
 
 [examples](docblock://query/endpointDefinitions.ts?token=MutationExtraOptions.invalidatesTags)
 
@@ -419,11 +419,11 @@ Overrides the api-wide definition of `keepUnusedDataFor` for this endpoint only.
 
 _(optional)_
 
-Available to both [queries](../../usage/rtk-query/queries.mdx) and [mutations](../../usage/rtk-query/mutations.mdx).
+Available to both [queries](../usage/queries.mdx) and [mutations](../usage/mutations.mdx).
 
 A function that is called when you start each individual query or mutation. The function is called with a lifecycle api object containing properties such as `queryFulfilled`, allowing code to be run when a query is started, when it succeeds, and when it fails (i.e. throughout the lifecycle of an individual query/mutation call).
 
-Can be used in `mutations` for [optimistic updates](../../usage/rtk-query/optimistic-updates.mdx).
+Can be used in `mutations` for [optimistic updates](../usage/optimistic-updates.mdx).
 
 #### Lifecycle API properties
 
@@ -468,11 +468,11 @@ async function onQueryStarted(
 
 _(optional)_
 
-Available to both [queries](../../usage/rtk-query/queries.mdx) and [mutations](../../usage/rtk-query/mutations.mdx).
+Available to both [queries](../usage/queries.mdx) and [mutations](../usage/mutations.mdx).
 
 A function that is called when a new cache entry is added, i.e. when a new subscription for the endpoint + query parameters combination is created. The function is called with a lifecycle api object containing properties such as `cacheDataLoaded` & `cacheDataRemoved`, allowing code to be run when a cache entry is added, when cache data is loaded, and when the cache entry is removed (i.e. throughout the lifecycle of a cache entry).
 
-Can be used for [streaming updates](../../usage/rtk-query/streaming-updates.mdx).
+Can be used for [streaming updates](../usage/streaming-updates.mdx).
 
 #### Cache Lifecycle API properties
 
