--- a/docs/rtk-query/usage/migrating-to-rtk-query.mdx
+++ b/docs/rtk-query/usage/migrating-to-rtk-query.mdx
@@ -318,7 +318,7 @@ Below we will walk through how a lot of the boilerplate can be avoided by migrat
 
 #### Api file
 
-Our code below is for our `api definition`, acting as our network API interface layer, created using [`createApi`](../../api/rtk-query/createApi.mdx). This file will contain our endpoint definition, and `createApi` will provide us with an auto-generated hook which manages firing our request only when necessary, as well as providing us with request status lifecycle booleans.
+Our code below is for our `api definition`, acting as our network API interface layer, created using [`createApi`](../api/createApi.mdx). This file will contain our endpoint definition, and `createApi` will provide us with an auto-generated hook which manages firing our request only when necessary, as well as providing us with request status lifecycle booleans.
 
 This will completely cover our logic implemented above for the entire slice file, including the thunk, slice definition, selectors, _and_ our custom hook!
 
@@ -348,7 +348,7 @@ export const { useGetPokemonByNameQuery } = api
 
 #### Connecting our Api to the store
 
-Now that we have our api definition created, we need to hook it up to our store. In order to do that, we will need to use the [`reducerPath`](../../api/rtk-query/created-api/redux-integration.mdx#reducerpath) and [`middleware`](../../api/rtk-query/created-api/redux-integration.mdx#middleware) properties from our created `api`. This will allow the store to process the internal actions that the generated hook uses, allows the generated API logic to find the state correctly, and adds the logic for managing caching, invalidation, subscriptions, polling, and more.
+Now that we have our api definition created, we need to hook it up to our store. In order to do that, we will need to use the [`reducerPath`](../api/created-api/redux-integration.mdx#reducerpath) and [`middleware`](../api/created-api/redux-integration.mdx#middleware) properties from our created `api`. This will allow the store to process the internal actions that the generated hook uses, allows the generated API logic to find the state correctly, and adds the logic for managing caching, invalidation, subscriptions, polling, and more.
 
 ```ts title="src/store.ts"
 // file: src/services/pokemonSlice.ts noEmit
