--- a/docs/rtk-query/usage/prefetching.mdx
+++ b/docs/rtk-query/usage/prefetching.mdx
@@ -20,7 +20,7 @@ There are a handful of situations that you may want to do this, but some very co
 
 Similar to the [`useMutation`](./mutations) hook, the `usePrefetch` hook will not run automatically — it returns a `callback function`.
 
-It accepts two arguments: the first is the key of a query action that you [defined in your API service](../../api/rtk-query/createApi#endpoints), and the second is an object of two optional parameters:
+It accepts two arguments: the first is the key of a query action that you [defined in your API service](../api/createApi#endpoints), and the second is an object of two optional parameters:
 
 ```ts title="usePrefetch Signature" no-transpile
 export type PrefetchOptions =
