--- a/docs/rtk-query/api/createApi.mdx
+++ b/docs/rtk-query/api/createApi.mdx
@@ -58,6 +58,49 @@ export const { useGetPokemonByNameQuery } = pokemonApi
 
 [summary](docblock://query/createApi.ts?token=CreateApiOptions.baseQuery)
 
+#### baseQuery function arguments
+
+- `args` - The return value of the `query` function for a given endpoint
+- `api` - The `BaseQueryApi` object, containing `signal`, `dispatch` and `getState` properties
+  - `signal` - An [`AbortSignal`](https://developer.mozilla.org/en-US/docs/Web/API/AbortSignal) object that may be used to abort DOM requests and/or read whether the request is aborted.
+  - `dispatch` - The `store.dispatch` method for the corresponding Redux store
+  - `getState` - A function that may be called to access the current store state
+- `extraOptions` - The value of the optional `extraOptions` property provided for a given endpoint
+
+#### baseQuery function signature
+
+```ts title="Base Query signature" no-transpile
+export type BaseQueryFn<
+  Args = any,
+  Result = unknown,
+  Error = unknown,
+  DefinitionExtraOptions = {},
+  Meta = {}
+> = (
+  args: Args,
+  api: BaseQueryApi,
+  extraOptions: DefinitionExtraOptions
+) => MaybePromise<QueryReturnValue<Result, Error, Meta>>
+
+export interface BaseQueryApi {
+  signal: AbortSignal
+  dispatch: ThunkDispatch<any, any, any>
+  getState: () => unknown
+}
+
+export type QueryReturnValue<T = unknown, E = unknown, M = unknown> =
+  | {
+      error: E
+      data?: undefined
+      meta?: M
+    }
+  | {
+      error?: undefined
+      data: T
+      meta?: M
+    }
+```
+
 [examples](docblock://query/createApi.ts?token=CreateApiOptions.baseQuery)
 
 ### `endpoints`
@@ -300,11 +343,49 @@ _(required if no `query` provided)_
 
 [summary](docblock://query/endpointDefinitions.ts?token=EndpointDefinitionWithQueryFn.queryFn)
 
+Called with the same arguments as `baseQuery`, as well as the provided `baseQuery` function itself. It is expected to return an object with either a `data` or `error` property, or a promise that resolves to return such an object.
+
+See also [Customizing queries with queryFn](../usage/customizing-queries.mdx#customizing-queries-with-queryfn).
+
+```ts title="queryFn signature" no-transpile
+queryFn(
+  arg: QueryArg,
+  api: BaseQueryApi,
+  extraOptions: BaseQueryExtraOptions<BaseQuery>,
+  baseQuery: (arg: Parameters<BaseQuery>[0]) => ReturnType<BaseQuery>
+): MaybePromise<
+| {
+    error: BaseQueryError<BaseQuery>
+    data?: undefined
+  }
+| {
+    error?: undefined
+    data: ResultType
+  }
+>
+
+export interface BaseQueryApi {
+  signal: AbortSignal
+  dispatch: ThunkDispatch<any, any, any>
+  getState: () => unknown
+}
+```
+
+#### queryFn function arguments
+
+- `args` - The argument provided when the query itself is called
+- `api` - The `BaseQueryApi` object, containing `signal`, `dispatch` and `getState` properties
+  - `signal` - An [`AbortSignal`](https://developer.mozilla.org/en-US/docs/Web/API/AbortSignal) object that may be used to abort DOM requests and/or read whether the request is aborted.
+  - `dispatch` - The `store.dispatch` method for the corresponding Redux store
+  - `getState` - A function that may be called to access the current store state
+- `extraOptions` - The value of the optional `extraOptions` property provided for the endpoint
+- `baseQuery` - The `baseQuery` function provided to the api itself
+
 [examples](docblock://query/endpointDefinitions.ts?token=EndpointDefinitionWithQueryFn.queryFn)
 
 ### `transformResponse`
 
-_(optional, can't be used with `queryFn`)_
+_(optional, not applicable with `queryFn`)_
 
 [summary](docblock://query/endpointDefinitions.ts?token=EndpointDefinitionWithQuery.transformResponse)
 
