--- a/docs/rtk-query/usage/customizing-queries.mdx
+++ b/docs/rtk-query/usage/customizing-queries.mdx
@@ -7,20 +7,23 @@ hide_title: true
 
 # Customizing queries
 
-RTK Query is agnostic as to how your requests resolve. You can use any library you like to handle requests, or no library at all. By default, RTK Query ships with [`fetchBaseQuery`](../api/fetchBaseQuery), which is a lightweight [`fetch`](https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API) wrapper that automatically handles request headers and response parsing in a manner similar to common libraries like `axios`. If `fetchBaseQuery` alone does not meet your needs, you can customize it's behaviour with a wrapper function, or create your own [`baseQuery`](../api/createApi#basequery) function from scratch for [`createApi`](../api/createApi) to use.
+RTK Query is agnostic as to how your requests resolve. You can use any library you like to handle requests, or no library at all. RTK Query provides reasonable defaults expected to cover the majority of use cases, while also allowing room for customization to alter query handling to fit specific needs.
 
-## Implementing a custom baseQuery
+## Customizing queries with baseQuery
+
+The default method to handle queries is via the [`baseQuery`](../api/createApi#basequery) option on [`createApi`](../api/createApi), in combination with the [`query`](../api/createApi.mdx#query) option on an endpoint definition.
+
+To process queries, endpoints are defined with a [`query`](../api/createApi.mdx#query) option, which passes it's return value to a common [`baseQuery`](../api/createApi#basequery) function used for the API.
+
+By default, RTK Query ships with [`fetchBaseQuery`](../api/fetchBaseQuery), which is a lightweight [`fetch`](https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API) wrapper that automatically handles request headers and response parsing in a manner similar to common libraries like `axios`. If `fetchBaseQuery` alone does not meet your needs, you can customize it's behaviour with a wrapper function, or create your own [`baseQuery`](../api/createApi.mdx#basequery) function from scratch for [`createApi`](../api/createApi) to use.
+
+See also [`baseQuery API Reference`](../api/createApi.mdx#basequery).
+
+### Implementing a custom baseQuery
 
 RTK Query expects a `baseQuery` function to be called with three arguments: `args`, `api`, and `extraOptions`. It is expected to return an object with either a `data` or `error` property, or a promise that resolves to return such an object.
 
-### baseQuery function arguments
-
-- `args` - The return value of the `query` function for a given endpoint
-- `api` - The `BaseQueryApi` object, containing `signal`, `dispatch` and `getState` properties
-  - `signal` - An [`AbortSignal`](https://developer.mozilla.org/en-US/docs/Web/API/AbortSignal) object that may be used to abort DOM requests and/or read whether the request is aborted.
-  - `dispatch` - The `store.dispatch` method for the corresponding Redux store
-  - `getState` - A function that may be called to access the current store state
-- `extraOptions` - The value of the optional `extraOptions` property provided for a given endpoint
+#### baseQuery function arguments
 
 ```ts title="baseQuery example arguments" no-transpile
 const customBaseQuery = (
@@ -34,7 +37,7 @@ const customBaseQuery = (
 }
 ```
 
-### baseQuery function return value
+#### baseQuery function return value
 
 1.  ```ts title="Expected success result format" no-transpile
     return { data: YourData }
@@ -56,51 +59,17 @@ const customBaseQuery = (
 }
 ```
 
+<!-- TODO: move this to a 'usage with typescript' page instead (and cover in more detail)-->
+
 The type for `data` is dictated based on the types specified per endpoint (both queries & mutations), while the type for `error` is dictated by the `baseQuery` function used.
 
 :::note
 This format is required so that RTK Query can infer the return types for your responses.
 :::
 
-### baseQuery function signature
+At it's core, a `baseQuery` function only needs to have the minimum return value to be valid; an object with a `data` or `error` property. It is up to the user to determine how they wish to use the provided arguments, and how requests are handled within the function itself.
 
-The signature of a `baseQuery` function is as follows:
-
-```ts title="Base Query signature" no-transpile
-export type BaseQueryFn<
-  Args = any,
-  Result = unknown,
-  Error = unknown,
-  DefinitionExtraOptions = {},
-  Meta = {}
-> = (
-  args: Args,
-  api: BaseQueryApi,
-  extraOptions: DefinitionExtraOptions
-) => MaybePromise<QueryReturnValue<Result, Error, Meta>>
-
-export interface BaseQueryApi {
-  signal: AbortSignal
-  dispatch: ThunkDispatch<any, any, any>
-  getState: () => unknown
-}
-
-export type QueryReturnValue<T = unknown, E = unknown, M = unknown> =
-  | {
-      error: E
-      data?: undefined
-      meta?: M
-    }
-  | {
-      error?: undefined
-      data: T
-      meta?: M
-    }
-```
-
-A custom `baseQuery` need only follow the `BaseQueryFn` signature above in order to be used. The [examples](#examples) further on demonstrate multiple implementations of `baseQuery` functions to meet different requirements.
-
-### fetchBaseQuery defaults
+#### fetchBaseQuery defaults
 
 For [`fetchBaseQuery`](../api/fetchBaseQuery) specifically, the return type is as follows:
 
@@ -126,9 +95,66 @@ Promise<{
     return { error: { status: number, data: YourErrorData } }
     ```
 
-## Examples
+## Customizing queries with queryFn
 
-### Axios Base Query
+Individual endpoints on [`createApi`](../api/createApi) accept a [`queryFn`](../api/createApi#queryfn) property which allows a given endpoint to ignore `baseQuery` for that endpoint by providing an inline function determining how that query resolves.
+
+This can be useful for scenarios where you want to have particularly different behaviour for a single endpoint, or where the query itself is not relevant. Such situations may include:
+
+- One-off queries that use a different base URL
+- One-off queries that use different request handling, such as automatic re-tries
+- One-off queries that use different error handling behaviour
+- Performing multiple requests with a single query ([example](#performing-multiple-requests-with-a-single-query))
+- Leveraging invalidation behaviour with no relevant query ([example](#no-op-queryfn))
+- Using [Streaming Updates](./streaming-updates) with no relevant initial request ([example](#streaming-data-with-no-initial-request))
+
+See also [`queryFn API Reference`](../api/createApi.mdx#queryfn) for the type signature and available options.
+
+### Implementing a `queryFn`
+
+In order to use `queryFn`, it can be treated as an inline `baseQuery`. It will be called with the same arguments as `baseQuery`, as well as the provided `baseQuery` function itself (`arg`, `api`, `extraOptions`, and `baseQuery`). Similarly to `baseQuery`, it is expected to return an object with either a `data` or `error` property, or a promise that resolves to return such an object.
+
+#### queryFn function arguments
+
+```ts title="queryFn example arguments" no-transpile
+const queryFn = (
+  // highlight-start
+  args,
+  { signal, dispatch, getState },
+  extraOptions,
+  baseQuery
+  // highlight-end
+) => {
+  // omitted
+}
+```
+
+#### queryFn function return value
+
+1.  ```ts title="Expected success result format" no-transpile
+    return { data: YourData }
+    ```
+2.  ```ts title="Expected error result format" no-transpile
+    return { error: YourError }
+    ```
+
+```ts title="queryFn example return value" no-transpile
+const queryFn = (
+  args,
+  { signal, dispatch, getState },
+  extraOptions,
+  baseQuery
+) => {
+  // highlight-start
+  if (Math.random() > 0.5) return { error: 'Too high!' }
+  return { data: 'All good!' }
+  // highlight-end
+}
+```
+
+## Examples - baseQuery
+
+### Axios baseQuery
 
 This example implements a very basic axios-based `baseQuery` utility.
 
@@ -172,6 +198,72 @@ const api = createApi({
       }),
     }
   },
+})
+```
+
+### GraphQL baseQuery
+
+This example implements a very basic GraphQL-based `baseQuery`.
+
+```ts title="Basic GraphQL baseQuery"
+import { createApi } from '@reduxjs/toolkit/query'
+import { request, gql, ClientError } from 'graphql-request'
+
+// highlight-start
+const graphqlBaseQuery = ({ baseUrl }: { baseUrl: string }) => async ({
+  body,
+}: {
+  body: string
+}) => {
+  try {
+    const result = await request(baseUrl, body)
+    return { data: result }
+  } catch (error) {
+    if (error instanceof ClientError) {
+      return { error: { status: error.response.status, data: error } }
+    }
+    return { error: { status: 500, data: error } }
+  }
+}
+// highlight-end
+
+export const api = createApi({
+  // highlight-start
+  baseQuery: graphqlBaseQuery({
+    baseUrl: 'https://graphqlzero.almansi.me/api',
+  }),
+  // highlight-end
+  endpoints: (builder) => ({
+    getPosts: builder.query({
+      query: () => ({
+        body: gql`
+          query {
+            posts {
+              data {
+                id
+                title
+              }
+            }
+          }
+        `,
+      }),
+      transformResponse: (response) => response.posts.data,
+    }),
+    getPost: builder.query({
+      query: (id) => ({
+        body: gql`
+        query {
+          post(id: ${id}) {
+            id
+            title
+            body
+          }
+        }
+        `,
+      }),
+      transformResponse: (response) => response.post,
+    }),
+  }),
 })
 ```
 
@@ -284,128 +376,6 @@ export const api = createApi({
 export const { useGetPostsQuery, useGetPostQuery } = api
 ```
 
-### Excluding baseQuery with queryFn
-
-Individual endpoints on [`createApi`](../api/createApi) accept a [`queryFn`](../api/createApi#queryfn) property which allows a given endpoint to ignore `baseQuery` for that endpoint by providing an inline function determining how that query resolves.
-
-This can be useful for scenarios where you want to have particularly different behaviour for a single endpoint, or where the query itself is not relevant. Such situations may include:
-
-- One-off queries that use a different base URL
-- One-off queries that use different handling, such as automatic re-tries
-- One off queries that use different error handling behaviour
-- Leveraging invalidation behaviour with no relevant query
-- Using [Streaming Updates](./streaming-updates) with no relevant initial query
-
-```ts title="Excluding baseQuery for a single endpoint"
-// file: types.ts noEmit
-export interface Post {
-  id: number
-  name: string
-}
-export interface User {
-  id: number
-  name: string
-}
-export interface Message {
-  id: number
-  channel: 'general' | 'redux'
-  userName: string
-  text: string
-}
-
-// file: api.ts
-import { createApi, fetchBaseQuery } from '@reduxjs/toolkit/query'
-import { Post, User, Message } from './types'
-
-const api = createApi({
-  baseQuery: fetchBaseQuery({ baseUrl: '/' }),
-  tagTypes: ['Post', 'User', 'Message'],
-  endpoints: (build) => ({
-    getPosts: build.query<Post[], void>({
-      query: () => 'posts',
-      providesTags: ['Post'],
-    }),
-
-    getUsers: build.query<User[], void>({
-      query: () => 'users',
-      providesTags: ['User'],
-    }),
-
-    // highlight-start
-    refetchPostsAndUsers: build.mutation<null, void>({
-      // The query is not relevant here, so a `null` returning `queryFn` is used
-      queryFn: () => ({ data: null }),
-      // This mutation takes advantage of tag invalidation behaviour to trigger
-      // any queries that provide the 'Post' or 'User' tags to re-fetch if the queries
-      // are currently subscribed to the cached data
-      invalidatesTags: ['Post', 'User'],
-    }),
-    // highlight-end
-
-    // highlight-start
-    streamMessages: build.query<Message[], void>({
-      // The query it not relevant here as the data will be provided via streaming updates.
-      // A queryFn returning an empty array is used, with contents being populated via
-      // streaming updates below as they are received.
-      queryFn: () => ({ data: [] }),
-      async onCacheEntryAdded(arg, { updateCachedData, cacheEntryRemoved }) {
-        const ws = new WebSocket('ws://localhost:8080')
-        // populate the array with messages as they are received from the websocket
-        ws.addEventListener('message', (event) => {
-          updateCachedData((draft) => {
-            draft.push(JSON.parse(event.data))
-          })
-        })
-        await cacheEntryRemoved
-        ws.close()
-      },
-    }),
-    // highlight-end
-  }),
-})
-```
-
-For typescript users, the error type that `queryFn` must return is dictated by the provided `baseQuery` function. For users who wish to _only_ use `queryFn` for each endpoint and not include a `baseQuery` at all, RTK Query provides a `fakeBaseQuery` function that can be used to easily specify the error type each `queryFn` should return.
-
-```ts title="Excluding baseQuery for all endpoints"
-import { createApi, fakeBaseQuery } from '@reduxjs/toolkit/query'
-
-type CustomErrorType = { type: 'too cold' | 'too hot' }
-
-const api = createApi({
-  // highlight-start
-  baseQuery: fakeBaseQuery<CustomErrorType>(),
-  // highlight-end
-  endpoints: (build) => ({
-    eatPorridge: build.query<'just right', 1 | 2 | 3>({
-      queryFn(seat) {
-        if (seat === 1) {
-          return { error: { type: 'too cold' } }
-        }
-
-        if (seat === 2) {
-          return { error: { type: 'too hot' } }
-        }
-
-        return { data: 'just right' }
-      },
-    }),
-    microwaveHotPocket: build.query<'delicious!', number>({
-      queryFn(duration) {
-        if (duration < 110) {
-          return { error: { type: 'too cold' } }
-        }
-        if (duration > 140) {
-          return { error: { type: 'too hot' } }
-        }
-
-        return { data: 'delicious!' }
-      },
-    }),
-  }),
-})
-```
-
 ### Adding Meta information to queries
 
 A `baseQuery` can also include a `meta` property in it's return value. This can be beneficial in cases where you may wish to include additional information associated with the request such as a request ID or timestamp.
@@ -492,6 +462,190 @@ const api = createApi({
         return returnValue.filter(
           (post) => post.timestamp >= meta.timestamp - DAY_MS
         )
+      },
+      // highlight-end
+    }),
+  }),
+})
+```
+
+## Examples - queryFn
+
+### Using a no-op queryFn
+
+In certain scenarios, you may wish to have a `query` or `mutation` where sending a request or returning data is not relevant for the situation. Such a scenario would be to leverage the `invalidatesTags` property to force re-fetch specific `tags` that have been provided to the cache.
+
+See also [`providing errors to the cache`](./cached-data.mdx#providing-data-to-the-cache) to see additional detail and an example for such a scenario to 'refetch errored queries'.
+
+```ts title="Using a no-op queryFn"
+// file: types.ts noEmit
+export interface Post {
+  id: number
+  name: string
+}
+export interface User {
+  id: number
+  name: string
+}
+
+// file: api.ts
+import { createApi, fetchBaseQuery } from '@reduxjs/toolkit/query'
+import { Post, User } from './types'
+
+const api = createApi({
+  baseQuery: fetchBaseQuery({ baseUrl: '/' }),
+  tagTypes: ['Post', 'User'],
+  endpoints: (build) => ({
+    getPosts: build.query<Post[], void>({
+      query: () => 'posts',
+      providesTags: ['Post'],
+    }),
+
+    getUsers: build.query<User[], void>({
+      query: () => 'users',
+      providesTags: ['User'],
+    }),
+
+    // highlight-start
+    refetchPostsAndUsers: build.mutation<null, void>({
+      // The query is not relevant here, so a `null` returning `queryFn` is used
+      queryFn: () => ({ data: null }),
+      // This mutation takes advantage of tag invalidation behaviour to trigger
+      // any queries that provide the 'Post' or 'User' tags to re-fetch if the queries
+      // are currently subscribed to the cached data
+      invalidatesTags: ['Post', 'User'],
+    }),
+    // highlight-end
+  }),
+})
+```
+
+### Streaming data with no initial request
+
+RTK Query provides the ability for an endpoint to send an initial request for data, followed up with recurring [streaming updates](./streaming-updates.mdx) that perform further updates to the cached data as the updates occur. However, the initial request is optional, and you may wish to use streaming updates without any initial request fired off.
+
+In the example below, a `queryFn` is used to populate the cache data with an empty array, with no initial request sent. The array is later populated using streaming updates via the [`onCacheEntryAdded`](../api/createApi.mdx#oncacheentryadded) endpoint option, updating the cached data as it is received.
+
+```ts title="Streaming data with no initial request"
+// file: types.ts noEmit
+export interface Message {
+  id: number
+  channel: 'general' | 'redux'
+  userName: string
+  text: string
+}
+
+// file: api.ts
+import { createApi, fetchBaseQuery } from '@reduxjs/toolkit/query'
+import { Message } from './types'
+
+const api = createApi({
+  baseQuery: fetchBaseQuery({ baseUrl: '/' }),
+  tagTypes: ['Message'],
+  endpoints: (build) => ({
+    // highlight-start
+    streamMessages: build.query<Message[], void>({
+      // The query is not relevant here as the data will be provided via streaming updates.
+      // A queryFn returning an empty array is used, with contents being populated via
+      // streaming updates below as they are received.
+      queryFn: () => ({ data: [] }),
+      async onCacheEntryAdded(arg, { updateCachedData, cacheEntryRemoved }) {
+        const ws = new WebSocket('ws://localhost:8080')
+        // populate the array with messages as they are received from the websocket
+        ws.addEventListener('message', (event) => {
+          updateCachedData((draft) => {
+            draft.push(JSON.parse(event.data))
+          })
+        })
+        await cacheEntryRemoved
+        ws.close()
+      },
+    }),
+    // highlight-end
+  }),
+})
+```
+
+### Performing multiple requests with a single query
+
+In the example below, a query is written to fetch all posts for a random user. This is done using a first request for a random user, followed by getting all posts for that user. Using `queryFn` allows the two requests to be included within a single query, avoiding having to chain that logic within component code.
+
+```ts title="Performing multiple requests with a single query"
+// file: types.ts noEmit
+export interface Post {}
+export interface User {
+  id: number
+}
+
+// file: api.ts
+import {
+  createApi,
+  fetchBaseQuery,
+  FetchBaseQueryError,
+} from '@reduxjs/toolkit/query'
+import { Post, User } from './types'
+
+const api = createApi({
+  baseQuery: fetchBaseQuery({ baseUrl: '/ ' }),
+  endpoints: (build) => ({
+    getRandomUserPosts: build.query<Post, void>({
+      async queryFn(_arg, _queryApi, _extraOptions, fetchWithBQ) {
+        // get a random user
+        const randomResult = await fetchWithBQ('users/random')
+        if (randomResult.error) throw randomResult.error
+        const user = randomResult.data as User
+        const result = await fetchWithBQ(`user/${user.id}/posts`)
+        return result.data
+          ? { data: result.data as Post }
+          : { error: result.error as FetchBaseQueryError }
+      },
+    }),
+  }),
+})
+```
+
+### Excluding baseQuery for all endpoints
+
+<!-- TODO: move this to a 'usage with typescript' page instead-->
+
+For typescript users, the error type that `queryFn` must return is dictated by the provided `baseQuery` function. For users who wish to _only_ use `queryFn` for each endpoint and not include a `baseQuery` at all, RTK Query provides a `fakeBaseQuery` function that can be used to easily specify the error type each `queryFn` should return.
+
+```ts title="Excluding baseQuery for all endpoints"
+import { createApi, fakeBaseQuery } from '@reduxjs/toolkit/query'
+
+type CustomErrorType = { type: 'too cold' | 'too hot' }
+
+const api = createApi({
+  // highlight-start
+  baseQuery: fakeBaseQuery<CustomErrorType>(),
+  // highlight-end
+  endpoints: (build) => ({
+    eatPorridge: build.query<'just right', 1 | 2 | 3>({
+      // highlight-start
+      queryFn(seat) {
+        if (seat === 1) {
+          return { error: { type: 'too cold' } }
+        }
+
+        if (seat === 2) {
+          return { error: { type: 'too hot' } }
+        }
+
+        return { data: 'just right' }
+      },
+      // highlight-end
+    }),
+    microwaveHotPocket: build.query<'delicious!', number>({
+      // highlight-start
+      queryFn(duration) {
+        if (duration < 110) {
+          return { error: { type: 'too cold' } }
+        }
+        if (duration > 140) {
+          return { error: { type: 'too hot' } }
+        }
+
+        return { data: 'delicious!' }
       },
       // highlight-end
     }),
