Docs - RTK: add `Usage with Typescript` page

--- a/docs/rtk-query/api/created-api/hooks.mdx
+++ b/docs/rtk-query/api/created-api/hooks.mdx
@@ -293,6 +293,8 @@ type UseQueryResult<T> = {
 
 [summary](docblock://query/core/buildSelectors.ts?token=skipToken)
 
+See also [Skipping queries with TypeScript using `skipToken`](../../usage/usage-with-typescript.mdx#skipping-queries-with-typescript-using-skiptoken)
+
 ## `useMutation`
 
 #### Signature
