--- a/docs/rtk-query/usage/streaming-updates.mdx
+++ b/docs/rtk-query/usage/streaming-updates.mdx
@@ -15,7 +15,7 @@ To enable streaming updates for a query, pass the asynchronous `onCacheEntryAdde
 
 ## When to use streaming updates
 
-Primarily updates to query data should be done via [`polling`](./polling) intermittently on an interval, using [`cache invalidation`](./cached-data#advanced-invalidation-with-abstract-tag-ids) to invalidate data based on tags associated with queries & mutations, or with [`refetchOnMountOrArgChange`](../api/createApi#refetchonmountorargchange) to fetch fresh data when a component using the data mounts.
+Primarily updates to query data should be done via [`polling`](./polling) intermittently on an interval, using [`cache invalidation`](./automated-refetching#advanced-invalidation-with-abstract-tag-ids) to invalidate data based on tags associated with queries & mutations, or with [`refetchOnMountOrArgChange`](../api/createApi#refetchonmountorargchange) to fetch fresh data when a component using the data mounts.
 
 However, streaming updates is particularly useful for scenarios involving:
 
