Docs/Examples - add optimistic-update example to repo (#1095)
Co-authored-by: Matt Sutkowski <msutkowski@gmail.com>
Co-authored-by: Lenz Weber <mail@lenzw.de>

--- a/docs/rtk-query/usage/examples.mdx
+++ b/docs/rtk-query/usage/examples.mdx
@@ -32,7 +32,7 @@ In the example below you'll notice a few things. There are two `Posts` list on t
 The example has some intentionally wonky behavior... when editing the name of a post, there is a decent chance you'll get a random error.
 :::
 
-<iframe src="https://codesandbox.io/embed/concepts-optimistic-updates-lush8?fontsize=12&hidenavigation=1&module=%2Fsrc%2Fapp%2Fservices%2Fposts.ts&theme=dark&runonclick=1"
+<iframe src="https://codesandbox.io/embed/github/reduxjs/redux-toolkit/tree/feature/v1.6-integration/examples/query/react/optimistic-update?fontsize=12&hidenavigation=1&module=%2Fsrc%2Fapp%2Fservices%2Fposts.ts&theme=dark&runonclick=1"
      style={{ width: '100%', height: '800px', border: 0, borderRadius: '4px', overflow: 'hidden' }}
      title="RTK Query Optimistic Update Example"
      allow="geolocation; microphone; camera; midi; vr; accelerometer; gyroscope; payment; ambient-light-sensor; encrypted-media; usb" 
