--- a/docs/rtk-query/usage/prefetching.mdx
+++ b/docs/rtk-query/usage/prefetching.mdx
@@ -127,7 +127,7 @@ This is a very basic example that shows how you can prefetch when a user hovers 
     borderRadius: '4px',
     overflow: 'hidden',
   }}
-  title="rtk-query-react-hooks-usePrefetch-example"
+  title="RTK Query - Prefetching Example"
   allow="geolocation; microphone; camera; midi; vr; accelerometer; gyroscope; payment; ambient-light-sensor; encrypted-media; usb"
   sandbox="allow-modals allow-forms allow-popups allow-scripts allow-same-origin"
 ></iframe>
@@ -145,7 +145,7 @@ Picking up on our last example, we automatically `prefetch` the next page, givin
     borderRadius: '4px',
     overflow: 'hidden',
   }}
-  title="rtk-query-react-hooks-usePrefetch-example"
+  title="RTK Query - Automatic Prefetching Example (on hover)"
   allow="geolocation; microphone; camera; midi; vr; accelerometer; gyroscope; payment; ambient-light-sensor; encrypted-media; usb"
   sandbox="allow-modals allow-forms allow-popups allow-scripts allow-same-origin"
 ></iframe>
@@ -163,7 +163,7 @@ After the first query initialized by `useQuery` runs, we automatically fetch all
     borderRadius: '4px',
     overflow: 'hidden',
   }}
-  title="Concepts Prefetching Automatic Waterfall"
+  title="RTK Query - Automatic Prefetching Waterfall Example"
   allow="geolocation; microphone; camera; midi; vr; accelerometer; gyroscope; payment; ambient-light-sensor; encrypted-media; usb"
   sandbox="allow-modals allow-forms allow-popups allow-scripts allow-same-origin"
 ></iframe>
