Query examples: GraphQL Basic (#1109)
* Add GraphQL example
* Update gql query

--- a/docs/rtk-query/usage/examples.mdx
+++ b/docs/rtk-query/usage/examples.mdx
@@ -58,7 +58,7 @@ The example has some intentionally wonky behavior... when editing the name of a 
 ## React with GraphQL
 
 <iframe
-  src="https://codesandbox.io/embed/rtk-query-graphql-basic-zkqfz?fontsize=12&hidenavigation=1&theme=dark&module=%2Fsrc%2Fapi.js&runonclick=1"
+  src="https://codesandbox.io/embed/github/reduxjs/redux-toolkit/tree/feature/v1.6-integration/examples/query/react/graphql?fontsize=12&hidenavigation=1&theme=dark&module=%2Fsrc%2Fapi.js&runonclick=1"
   style={{
     width: '100%',
     height: '800px',
